# FlashTile

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: benchmark.py
demo/: FlashTile_Demo.ipynb  app.py
docs/: ALGORITHM.md  ARCHITECTURE.md  PERFORMANCE.md  USAGE.md
flashtile/: __init__.py
flashtile/attention/: __init__.py  amp_compat.py  base_attention.py  flash_attention_v1.py  flash_attention_v2.py  grouped_query_attention.py  masked_attention.py  naive_attention.py  sliding_window_attention.py
flashtile/kernels/: __init__.py  kernel_benchmarks.py  triton_flash_kernel.py
flashtile/utils/: __init__.py  attention_visualizer.py  kernel_profiler.py  memory_profiler.py  visualization.py
flashtile_results_A100/: system_info.txt
flashtile_results_A100/benchmarks/: causal_log.txt  non_causal_log.txt
flashtile_results_A100/benchmarks/causal/: benchmark_results.json
flashtile_results_A100/benchmarks/non_causal/: benchmark_results.json
flashtile_results_A100/tests/: full_suite.txt  summary.txt  test_correctness.txt  test_factory.txt  test_flash_v2.txt  test_gqa.txt  test_integration.txt  test_masked_attention.txt  test_performance.txt  test_precision.txt  test_sliding_window.txt  test_stress.txt  test_torch_compile.txt  test_triton.txt
flashtile_results_A100/validation/: validation_log.txt  validation_results.json
flashtile_results_H100/: NOTE.md  system_info.txt
flashtile_results_H100/benchmarks/: causal_log.txt  non_causal_log.txt
flashtile_results_H100/benchmarks/causal/: benchmark_results.json
flashtile_results_H100/benchmarks/non_causal/: benchmark_results.json
flashtile_results_H100/tests/: full_suite.txt  summary.txt  test_correctness.txt  test_factory.txt  test_flash_v2.txt  test_gqa.txt  test_integration.txt  test_masked_attention.txt  test_performance.txt  test_precision.txt  test_sliding_window.txt  test_stress.txt  test_torch_compile.txt  test_triton.txt
flashtile_results_H100/validation/: validation_log.txt  validation_results.json
tests/: __init__.py  test_correctness.py  test_factory.py  test_flash_v2.py  test_gqa.py  test_integration.py  test_masked_attention.py  test_performance.py  test_precision.py  test_sliding_window.py  test_stress.py  test_torch_compile.py  test_triton.py
