[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashtile"
version = "0.2.2"
description = "Educational Flash Attention implementation with memory-efficient backward (V1/V2), GQA/MQA for inference, and Triton kernels (forward-only). Validated on A100 and H100 GPUs, achieving up to 104x memory reduction."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Muskula Rahul"}
]
keywords = [
    "flash-attention",
    "transformers",
    "attention",
    "gpu",
    "memory-efficient",
    "deep-learning",
    "pytorch",
    "triton",
    "grouped-query-attention",
    "multi-query-attention",
    "gqa",
    "mqa",
    "llm",
    "inference-optimization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
triton = [
    "triton>=2.1.0",
]
benchmark = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
]
demo = [
    "gradio>=4.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.0.0",
]
all = [
    "triton>=2.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "gradio>=4.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iamrahulreddy/FlashTile"
Repository = "https://github.com/iamrahulreddy/FlashTile"
Documentation = "https://github.com/iamrahulreddy/FlashTile#readme"
Issues = "https://github.com/iamrahulreddy/FlashTile/issues"
Blog = "https://neuralnets.dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["flashtile*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests", "benchmark"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["flashtile"]
omit = ["*/tests/*", "*/benchmark/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
